--- a/etc/feng-uninstalled.conf.in
+++ b/etc/feng-uninstalled.conf.in
@@ -10,7 +10,7 @@ var.statedir = "@abs_top_builddir@"
 #)
 
 # bind to port (defaults to @fenice_rtsp_port@)
-server.port         = 8554
+# server.port         = 8554
 
 # bind to name (defaults to all interfaces)
 # server.bind         = "live.host.tld"
