Enforce checking for libev

--- a/configure.ac
+++ b/configure.ac
@@ -47,7 +47,8 @@ AC_ARG_ENABLE(libavformat,
         enable_ffmpeg="yes")
 
 AC_CHECK_HEADERS([ev.h])
-AC_SEARCH_LIBS([ev_io_start],[ev])
+AC_SEARCH_LIBS([ev_io_start], [ev],,
+    [AC_MSG_ERROR([libev not found, feng requires libev])])
 
 AC_ARG_ENABLE(trace,
     AS_HELP_STRING([--enable-trace], [enable additional informations in log [[default=no]]]),,
