Start implementing some basic request parsing in Ragel.
Start using Ragel for parsing the requests, hopefully this will allow
an easier extension of feng functionalities on the long term.

--- a/src/network/Makefile.am
+++ b/src/network/Makefile.am
@@ -24,3 +24,8 @@ libnetwork_a_SOURCES = \
 		rtsp_utils.c \
 		sdp2.h \
 		sdp_session_descr.c
+
+rtsp_state_machine.o: requestline.c
+
+%.c: %.rl
+	$(RAGEL) $< -o $@
