Create a new interface to create and send RTSP responses.
Instead of always handling them as strings, handle RTSP responses as
object, similarly to what is done with requests, with an hash table
for headers.

This way it's posssible to add, remove or replace headers as needed,
and is also possible to have advanced logging capabilities when
sending the responses out.

Apply the new interface on all the methods so that it works as
intended.

--- a/src/network/Makefile.am
+++ b/src/network/Makefile.am
@@ -17,6 +17,7 @@ libnetwork_a_SOURCES = \
 		rtsp_options.c \
 		rtsp_pause.c \
 		rtsp_play.c \
+		rtsp_response.c \
 		rtsp_set_parameter.c \
 		rtsp_setup.c \
 		rtsp_state_machine.c \
