Parse the Range header using a Ragel state machine.
Instead of scanning the Range header manually, parse it using a Ragel
state machine. The new state machine will make it piece of cake to
support new range formats, like clock and smtpe if we decide to go
with them.

--- a/src/network/Makefile.am
+++ b/src/network/Makefile.am
@@ -28,6 +28,7 @@ libnetwork_a_SOURCES = \
 
 rtsp_state_machine.o: ragel_request.c
 rtsp_method_setup.o: ragel_transport.c
+rtsp_method_play.o: ragel_range.c
 
 %.c: %.rl
 	$(RAGEL) $< -o $@
