Update the request parser to make use of the new liberis interface.
Since parsing of messages is being moved into liberis and made work in a
more complex fashion, try to reduce the amount of work done by feng.

With the new interface, feng just has to parse the request line, while the
header are autonomously parsed by liberis. The new parsers have a very
different interface as they return the number of characters consumed, or
zero in case of error, rather than their parsing status.

--- a/src/network/Makefile.am
+++ b/src/network/Makefile.am
@@ -26,7 +26,7 @@ libnetwork_a_SOURCES = \
 		sdp2.h \
 		sdp_session_descr.c
 
-rtsp_state_machine.o: ragel_request.c
+rtsp_state_machine.o: ragel_request_line.c
 rtsp_method_setup.o: ragel_transport.c
 rtsp_method_play.o: ragel_range.c
 
@@ -34,6 +34,6 @@ rtsp_method_play.o: ragel_range.c
 	$(RAGEL) $< -o $@
 
 CLEANFILES = \
-	ragel_request.c \
+	ragel_request_line.c \
 	ragel_transport.c \
 	ragel_range.c
