Avoid recursive make for building network-related source files.
Try to reduce overhead of rebuilding feng incrementally. To do this, make
the ragel parsers standalone, like it's already done for liberis.

This should also improve dependency tracking.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,17 +1,53 @@
-SUBDIRS = mediathread network conf .
+SUBDIRS = mediathread conf .
 
 feniceincludedir = $(top_srcdir)/include
 
 bin_PROGRAMS = feng
 
-feng_SOURCES = main.c fnc_log.c \
-		eventloop.c eventloop.h \
-		schedule.c \
-		is_valid_multicast_address.c \
-		client_events.h client_events.c
+BUILT_SOURCES = \
+	network/ragel_request_line.c \
+	network/ragel_transport.c \
+	network/ragel_range.c
 
-feng_LDADD =	network/libnetwork.a \
+feng_SOURCES = \
+	network/rtcp.h \
+	network/rtcp_handler.c \
+	network/rtcp_recv_packet.c \
+	network/rtcp_send_packet.c \
+	network/rtp.h \
+	network/rtp_port.c \
+	network/rtp_transport.c \
+	network/rtpptdefs.h \
+	network/rtsp.h \
+	network/rtsp_lowlevel.c \
+	network/rtsp_method_describe.c \
+	network/rtsp_method_options.c \
+	network/rtsp_method_pause.c \
+	network/rtsp_method_play.c \
+	network/rtsp_method_setup.c \
+	network/rtsp_method_teardown.c \
+	network/rtsp_response.c \
+	network/rtsp_state_machine.c \
+	network/rtsp_utils.c \
+	network/sdp2.h \
+	network/sdp_session_descr.c \
+	\
+	client_events.h client_events.c \
+	eventloop.c eventloop.h \
+	fnc_log.c \
+	is_valid_multicast_address.c \
+	main.c \
+	schedule.c \
+	\
+	$(BUILT_SOURCES)
+
+feng_LDADD = \
 		mediathread/libmediath.a \
 		conf/liblight.a
 
 INCLUDES = -I$(feniceincludedir) -I..
+
+$(BUILT_SOURCES): %.c: %.rl
+	$(RAGEL) $< -o $@
+
+CLEANFILES = $(BUILT_SOURCES)
