Write a macro to check for Ragel.
Since we need Ragel when building out of GIT but we shouldn't require it on
users when building it from tarball, check whether it is required or not.

--- a/configure.ac
+++ b/configure.ac
@@ -77,8 +77,7 @@ dnl Checks used by conf/*
 dnl AC_CHECK_HEADERS([pcre.h fam.h])
 dnl AC_CHECK_FUNCS([lstat])
 
-AC_CHECK_PROG([RAGEL], [ragel], [ragel])
-AC_SUBST(RAGEL)
+CHECK_RAGEL([src/network/ragel_range.c])
 
 fenice_state_dir=$(eval echo ${localstatedir}/feng)
 AC_SUBST(fenice_state_dir)
