--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -47,7 +47,11 @@ feng_LDADD = \
 
 INCLUDES = -I$(feniceincludedir) -I..
 
+if HAVE_RAGEL
 $(BUILT_SOURCES): %.c: %.rl
 	$(RAGEL) $< -o $@
 
 CLEANFILES = $(BUILT_SOURCES)
+endif
+
+DISTCLEANFILES = $(BUILT_SOURCES)
