Distribute the source files.
This way the ragel-generated source files will be released with the
tarball.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,7 +9,7 @@ BUILT_SOURCES = \
 	network/ragel_transport.c \
 	network/ragel_range.c
 
-feng_SOURCES = \
+dist_feng_SOURCES = \
 	network/rtcp.h \
 	network/rtcp_handler.c \
 	network/rtcp_recv_packet.c \
