--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,14 +17,13 @@ dist_feng_SOURCES = \
 	network/rtp.h \
 	network/rtp_port.c \
 	network/rtp_transport.c \
-	network/rtpptdefs.h \
 	network/rtsp.h \
 	network/rtsp_lowlevel.c \
 	network/rtsp_method_describe.c \
 	network/rtsp_method_options.c \
 	network/rtsp_method_pause.c \
 	network/rtsp_method_play.c \
-	network/rtsp_method_setup.c \
+	network/rtsp_method_setup.c network/rtsp_method_setup.h \
 	network/rtsp_method_teardown.c \
 	network/rtsp_response.c \
 	network/rtsp_state_machine.c \
