Use suffixes-based rules instead of pattern-based rules.
By doing this, feng builds using NetBSD's bmake too, rather than just
gmake.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -47,7 +47,10 @@ feng_LDADD = \
 INCLUDES = -I$(feniceincludedir) -I..
 
 if HAVE_RAGEL
-$(BUILT_SOURCES): %.c: %.rl
+
+SUFFIXES = .rl
+
+.rl.c:
 	$(RAGEL) $< -o $@
 
 CLEANFILES = $(BUILT_SOURCES)
