Add the new Buffer Queue structure mean to replace bufferpool.
The new framework is a simplified version of bufferpool, with a simple
producer/consumer multithreaded system, and opaque data types. The whole
system deals with either opaque objects (producer and consumers) and a
generic pointer to the actual data passed from producers to consumers.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,6 +30,7 @@ dist_feng_SOURCES = \
 	network/sdp2.h \
 	network/sdp_session_descr.c \
 	\
+	bufferqueue.c bufferqueue.h \
 	client_events.h client_events.c \
 	eventloop.c eventloop.h \
 	fnc_log.c \
