Copy the used liberis sources inside feng and use that instead of the external version.
This is actually needed because we're not going to use liberis in the
following version (2.2) and thus we shouldn't rely on that as an external
shared library.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,9 +7,12 @@ bin_PROGRAMS = feng
 BUILT_SOURCES = \
 	network/ragel_request_line.c \
 	network/ragel_transport.c \
-	network/ragel_range.c
+	network/ragel_range.c \
+	liberis/headers_parser.c
 
 dist_feng_SOURCES = \
+	liberis/headers.h \
+	liberis/utils.c liberis/utils.h \
 	network/rtcp.h \
 	network/rtcp_handler.c \
 	network/rtcp_send_packet.c \
