--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -33,8 +33,8 @@ dist_feng_SOURCES = \
 	\
 	bufferqueue.c bufferqueue.h \
 	client_events.h client_events.c \
-	eventloop.c eventloop.h \
 	fnc_log.c fnc_log.h \
+	incoming.c incoming.h \
 	feng.h \
 	feng_utils.h \
 	main.c \
