Replace the mediathread with a simple Resource interface.
Instead of having a dedicated mediathread interface, reimplement the same
features with simple Resource object-based interface. The r_read and
r_close function work asynchronously thank to a per-resource thread pool
for reading (which can be told to read more packets at once), and a global
one for closing.

--- a/src/mediathread/Makefile.am
+++ b/src/mediathread/Makefile.am
@@ -10,10 +10,9 @@ libmediath_a_SOURCES =	cache.c \
 			InputStream.h \
 			mediaparser.c \
 			mediaparser.h mediaparser_module.h \
-			mediathread.c \
-			mediathread.h \
 			mediautils.c \
 			mediautils.h \
+			resource.c \
 			sdp_grammar.h \
 			parser/mpeg12.c \
 			parser/mpegaudio.c \
