Avoid the SDP2 name (which is nothing useful).
Replace sdp2.{c,h} with sdp.{c,h} and replace all the SDP2 occurrences with
sdp.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,7 +30,7 @@ dist_feng_SOURCES = \
 	network/rtsp_response.c \
 	network/rtsp_state_machine.c \
 	network/rtsp_utils.c \
-	network/sdp2.c network/sdp2.h \
+	network/sdp.c network/sdp.h \
 	\
 	bufferqueue.c bufferqueue.h \
 	fnc_log.c fnc_log.h \
