--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -24,8 +24,8 @@ ABBREVIATE_BRIEF       = "The $name class" \
 ALWAYS_DETAILED_SEC    = NO
 INLINE_INHERITED_MEMB  = NO
 FULL_PATH_NAMES        = YES
-STRIP_FROM_PATH        = @abs_top_srcdir@
-STRIP_FROM_INC_PATH    = @abs_top_srcdir@/include
+STRIP_FROM_PATH        = @abs_top_srcdir@/src
+STRIP_FROM_INC_PATH    = @abs_top_srcdir@/src
 SHORT_NAMES            = NO
 JAVADOC_AUTOBRIEF      = NO
 MULTILINE_CPP_IS_BRIEF = NO
@@ -81,7 +81,7 @@ WARN_LOGFILE           =
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = @abs_top_srcdir@
+INPUT                  = @abs_top_srcdir@/src
 FILE_PATTERNS          = *.c \
                          *.h
 
