Start using *_ONCE macros

--- a/configure.ac
+++ b/configure.ac
@@ -63,8 +63,8 @@ AC_ARG_ENABLE(metadata,
     enable_metadata="no")
 
 dnl Checks used by feng itself
-AC_CHECK_FUNCS([mmap])
-AC_CHECK_HEADERS([syslog.h])
+AC_CHECK_FUNCS_ONCE([mmap])
+AC_CHECK_HEADERS_ONCE([syslog.h])
 
 AC_SEARCH_LIBS([clock_gettime], [rt],
   [AC_DEFINE([HAVE_CLOCK_GETTIME], [1], [Define this if you have clock_gettime])])
