Make sure the ChangeLog is autobuilt when using git clones.
This way we can distribute a proper ChangeLog with all the changes in the
release.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,5 @@
 SUBDIRS = src
 
-EXTRA_DIST = RELEASE
-
 ACLOCAL_AMFLAGS = -I m4
 
 FENICE_AVROOT_DIR = $(fenice_avroot_dir)
@@ -18,3 +16,14 @@ feng_confdir = $(fenice_conf_dir)
 dist_feng_conf_DATA = etc/feng.conf
 
 dist_man_MANS = docs/feng.1
+
+dist_doc_DATA = AUTHORS ChangeLog NEWS README RELEASE TODO
+MAINTAINERCLEANFILES = ChangeLog
+
+if CHANGELOG_REGEN
+ChangeLog:
+	GIT_DIR="${srcdir}/.git" git log --pretty > $@
+
+# Always regenerate!
+.PHONY: ChangeLog
+endif
