--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -99,7 +99,7 @@ include $(top_srcdir)/ragel.make
 CLEANFILES = $(BUILT_SOURCES)
 endif
 
-check_PROGRAMS = bq_test-1 bq_test-2 bq_test-3
+check_PROGRAMS = bq_test-1 bq_test-2 bq_test-3 bq_test-4
 
 bq_test_1_SOURCES = bufferqueue.c \
 		  bq_test-1.c
@@ -107,7 +107,9 @@ bq_test_2_SOURCES = bufferqueue.c \
 		  bq_test-2.c
 bq_test_3_SOURCES = bufferqueue.c \
 		  bq_test-3.c
+bq_test_4_SOURCES = bufferqueue.c \
+		  bq_test-4.c
 
-TESTS = bq_test-1 bq_test-2 bq_test-3
+TESTS = bq_test-1 bq_test-2 bq_test-3 bq_test-4
 
 DISTCLEANFILES = $(BUILT_SOURCES)
