Try to merge in all the lscube-particular initialisation.
Since all three of feng, netembryo and libnemesi share a lot of common code
in configure.ac, have a single LSC_INIT macro to recall all of it.

--- a/configure.ac
+++ b/configure.ac
@@ -3,29 +3,9 @@ AC_PREREQ(2.61)
 AC_INIT([feng], [2.1.0_rc1])
 AC_CONFIG_AUX_DIR(config)
 AM_INIT_AUTOMAKE([dist-bzip2 no-dist-gzip foreign subdir-objects])
-m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
-AM_MAINTAINER_MODE
-
-AC_PREFIX_DEFAULT("/usr")
-
-AC_PROG_CC_C99
-AS_IF([test "x$ac_cv_prog_cc_c99" = "xno"], [
-  AC_MSG_ERROR([no C99 compiler found, feng requires a C99 compiler.])
-])
+LSC_INIT
 
 AC_PROG_RANLIB
-
-AC_USE_SYSTEM_EXTENSIONS
-dnl Force usage of POSIX.1-2001 (clock_gettime)
-CPPFLAGS="${CPPFLAGS} -D_POSIX_C_SOURCE=200112L"
-
-dnl Enable some further OS-specific extensions that AC_USE_SYSTEM_EXTENSIONS
-dnl does not enable at least up to autoconf 2.63.
-dnl These extensions are needed to have struct ip_mreq for multicast support.
-AC_CANONICAL_HOST
-AS_CASE([$host_os],
-	[darwin*], [CPPFLAGS="${CPPFLAGS} -D_DARWIN_C_SOURCE"],
-	[freebsd[[78]]*], [CPPFLAGS="${CPPFLAGS} -D__BSD_VISIBLE=1"])
 
 AC_CONFIG_HEADER([config.h])
 
@@ -163,10 +143,6 @@ fi
 CC_ATTRIBUTE_UNUSED(
   [AC_DEFINE([ATTR_UNUSED], [__attribute__((__unused__))], [Define this if ATTR_UNUSED is supported])],
   [AC_DEFINE([ATTR_UNUSED], [], [Define this if ATTR_UNUSED is not supported])])
-
-LSC_ERRORS
-LSC_DEBUG
-LSC_TESTS
 
 if test "$enable_trace" = "yes"; then
     AC_DEFINE(TRACE, 1,[Trace enabled])
