Start implementing a tokenizer generator.
This is a multi-step process:

 - the xml file describes the information we know about the rfc822-based
   protocol (version, methods, headers);
 - an XSLT processor will produce a header with the enumerations and a
   prototype for the conversion enum → string representation of the
   headers, a source file with the conversion implementation, and a Ragel
   state machine file that performs the string → enum conversion;
 - the Ragel state machines can then be used directly into either the
   line-by-line or message parser.

--- a/configure.ac
+++ b/configure.ac
@@ -146,6 +146,14 @@ if test "$enable_trace" = "yes"; then
     AC_DEFINE(TRACE, 1,[Trace enabled])
 fi
 
+AC_ARG_VAR([XSLTPROC], [A libxslt-compatible XSLT processor command])
+AS_IF([test "x$XSLTPROC" = "x"], [
+  AC_CHECK_PROGS([XSLTPROC], [xsltproc])
+  AS_IF([test "x$XSLTPROC" = "x"], [
+    AC_MSG_ERROR([unable to find xsltproc, you need this to build feng])
+  ])
+])
+
 fenice_avroot_dir=$(eval echo $localstatedir/$PACKAGE_NAME/avroot|sed -e "s:/\+:/:g; s:NONE::g")
 
 AC_SUBST(fenice_avroot_dir)
